syntax = "proto3";
option go_package="../relationservice";

package relationservice;

message DouYinRelationActionRequest {
  string token = 1; // 用户鉴权token
  int64 to_user_id = 2; // 对方用户id
  int32 action_type = 3; // 1-关注,2-取消关注
}

message DouYinRelationActionResponse {
  int32 status_code = 1; // 状态码,0-成功,其他值-失败
  string status_msg = 2; // 返回状态描述
}

message DouYinRelationFollowListRequest {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}

message DouYinRelationFollowListResponse {
  int32 status_code = 1; // 状态码,0-成功,其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated User user_list = 3; // 用户信息列表
}

message DouYinRelationFollowerListRequest {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token  
}

message DouYinRelationFollowerListResponse {
  int32 status_code = 1; // 状态码,0-成功,其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated User user_list = 3; // 用户列表
}

message DouYinRelationFriendListRequest {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}

message DouYinRelationFriendListResponse {
  int32 status_code = 1; // 状态码,0-成功,其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated FriendUser user_list = 3; // 用户列表
}

message User {
  int64 id = 1; // 用户id
  string name = 2; // 用户名称
  int64 follow_count = 3; // 关注总数
  int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注,false-未关注
  string avatar = 6; //用户头像
  string background_image = 7; //用户个人页顶部大图
  string signature = 8; //个人简介
  int64 total_favorited = 9; //获赞数量
  int64 work_count = 10; //作品数量
  int64 favorite_count = 11; //点赞数量
}

message FriendUser {
  int64 id = 1; // 用户id
  string name = 2; // 用户名称
  int64 follow_count = 3; // 关注总数
  int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注,false-未关注
  string avatar = 6; //用户头像
  string background_image = 7; //用户个人页顶部大图
  string signature = 8; //个人简介
  int64 total_favorited = 9; //获赞数量
  int64 work_count = 10; //作品数量
  int64 favorite_count = 11; //点赞数量
  string message = 12; // 和该好友的最新聊天消息
  int64 msg_type = 13; // message消息的类型
}

service RelationActionService {
	//rpc 服务的函数名 （传入参数）返回（返回参数）
	rpc RelationAction (DouYinRelationActionRequest) returns (DouYinRelationActionResponse);
}

service RelationFollowListService {
	//rpc 服务的函数名 （传入参数）返回（返回参数）
	rpc RelationFollowList (DouYinRelationFollowListRequest) returns (DouYinRelationFollowListResponse);
}

service RelationFollowerListService {
	//rpc 服务的函数名 （传入参数）返回（返回参数）
	rpc RelationFollowerList (DouYinRelationFollowerListRequest) returns (DouYinRelationFollowerListResponse);
}

service RelationFriendListService {
	//rpc 服务的函数名 （传入参数）返回（返回参数）
	rpc RelationFriendList (DouYinRelationFriendListRequest) returns (DouYinRelationFriendListResponse);
}